[package]
name = "testcargo"
version = "0.1.0"
authors = ["fschutt <felix.schuett@maps4print.com>"]
edition = "2018"

[[bin]]
name = "azul-dll"
edition = "2018"
path = "src/main.rs"

[lib]
name = "azul"
edition = "2018"
crate-type = ["cdylib"]
doc = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
